--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,28 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-family: "Be Vietnam Pro", sans-serif;
+}
+
+:root {
+    --primary-color: #f6c800;
+    --secondary-color: #000000e5;
+    --accent-color: #f6c800;
+    --shadow-color: #e8e8e8;
+
+    --background-dark: #0d0c0c;
+    --background-secondary: #242323;
+
+    --content-padding: 16px;
+}
+
+button.primary {
+    padding: 10px;
+    border: solid 1px var(--primary-color);
+    background: var(--primary-color);
+    color: white;
+    border-radius: 8px;
+}
