--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,12 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-}
-
-body {
-    font-family: "Be Vietnam Pro", sans-serif;
-}
-
 :root {
     --primary-color: #f6c800;
     --secondary-color: #000000e5;
@@ -17,6 +8,20 @@ body {
     --background-secondary: #242323;
 
     --content-padding: 16px;
+}
+* {
+    margin: 0;
+    padding: 0;
+}
+
+html,
+body {
+    font-family: "Be Vietnam Pro", sans-serif;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    background-color: var(--secondary-color);
 }
 
 button.primary {
