--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -38,6 +38,7 @@ a {
     color: #f6c800;
     width: 100%;
     box-shadow: 0px 15px 16px -6px rgba(0, 0, 0, 0.75);
+    border-radius: 25px 5px 25px 5px;
 }
 
 .listing-infos {
