--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -1,6 +1,6 @@
 .listing {
     background: var(--accent-color);
-    border-radius: 30px;
+    border-radius: 8px;
     padding-bottom: 18px;
     text-align: center;
 }
@@ -20,7 +20,7 @@
 }
 
 .listing-photo {
-    height: 250px;
+    height: 400px;
     width: 100%;
     object-fit: fill;
     @include box-shadow;
@@ -29,11 +29,19 @@
 .listing-heading {
     color: var(--secondary-color);
     margin-bottom: 16px;
+    position: relative;
+}
+
+.stars {
+    position: absolute;
+    font-size: 16px;
+    right: 8px;
+    top: -12px;
 }
 
 a {
     text-decoration: none;
-    padding: 8px;
+    padding: 8px 16px;
     background: #242323;
     color: #f6c800;
     width: 100%;
