--- a/src/app/components/movie-details/movie-details.component.scss
+++ b/src/app/components/movie-details/movie-details.component.scss
@@ -14,12 +14,14 @@
 
 article {
     background: #f6c800;
+    text-align: left;
 }
 
 .listing-photo {
     height: 600px;
-    width: 50%;
-    object-fit: cover;
+    width: 100%;
+    object-fit: contain;
+    padding: 16px 0px;
     @include box-shadow;
 }
 
@@ -28,6 +30,7 @@ article {
     font-weight: bold;
     margin-bottom: 15px;
     @include belt;
+    position: relative;
 }
 
 .section-heading {
