--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -6,9 +6,9 @@
 }
 
 @mixin box-shadow {
-    -webkit-box-shadow: 0px 15px 16px -6px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 0px 15px 16px -6px rgba(0, 0, 0, 0.75);
-    box-shadow: 0px 15px 16px -6px rgba(0, 0, 0, 0.75);
+    -webkit-box-shadow: 0px 15px 6px -12px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 15px 6px -12px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 15px 6px -12px rgba(0, 0, 0, 0.75);
 }
 
 @mixin belt {
@@ -45,8 +45,12 @@ a {
     background: #242323;
     color: #f6c800;
     width: 100%;
-    box-shadow: 0px 15px 16px -6px rgba(0, 0, 0, 0.75);
     border-radius: 25px 5px 25px 5px;
+    @include box-shadow;
+
+    &:hover {
+        opacity: 0.8;
+    }
 }
 
 .listing-infos {
