--- a/src/app/components/movie-card/movie-card.component.scss
+++ b/src/app/components/movie-card/movie-card.component.scss
@@ -1,10 +1,3 @@
-.listing {
-    background: var(--accent-color);
-    border-radius: 8px;
-    padding-bottom: 18px;
-    text-align: center;
-}
-
 @mixin box-shadow {
     -webkit-box-shadow: 0px 15px 6px -12px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 15px 6px -12px rgba(0, 0, 0, 0.75);
@@ -12,11 +5,17 @@
 }
 
 @mixin belt {
-    background: var(--primary-color);
-    padding: 8px;
     background: var(--background-secondary);
+    padding: 8px;
     @include box-shadow;
     color: var(--primary-color);
+}
+
+.listing {
+    background: var(--accent-color);
+    border-radius: 8px;
+    padding-bottom: 18px;
+    text-align: center;
 }
 
 .listing-photo {
@@ -60,12 +59,17 @@ a {
     h2 {
         @include belt;
     }
-    p {
-        margin-left: 8px;
-        font-weight: bold;
-    }
+
+    p,
     h5 {
         margin-left: 8px;
+    }
+
+    p {
+        font-weight: bold;
+    }
+
+    h5 {
         font-size: 0.7rem;
     }
 }
